# QTPractise

CoinFlip/: CMakeLists.txt  main.cpp  mainscenes.cpp  mainscenes.h  mainscenes.ui  mypushbutton.cpp  mypushbutton.h  mystackwidget.cpp  mystackwidget.h
Config/: CMakeLists.txt  Config.pro  choselevelsense.cpp  choselevelsense.h  main.cpp  mainscene.cpp  mainscene.h  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playsence.cpp  playsence.h  res.qrc
CustomSignalAndSlot/: CMakeLists.txt  student.cpp  student.h  teacher.h  widget.cpp  widget.h
FirstQtProject/: CMakeLists.txt  mainwindow.cpp
LoginPageTest/: CMakeLists.txt  mainwindow.ui
OtherWidgetTest/: CMakeLists.txt  widget.cpp  widget.ui
PainterWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QButtonTest/: CMakeLists.txt  widget.cpp  widget.ui
QTEventPractise/: CMakeLists.txt  mainwindow.ui  mylabel.cpp  mylabel.h  mylabel.ui
QTreeWidgetTest/: CMakeLists.txt  widget.cpp
QtWidgetsTest/: CMakeLists.txt  mainwindow.cpp  resource.qrc
SmallWidget/: CMakeLists.txt  mainwindow.ui  smallwidget.cpp  smallwidget.ui
UITest/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
build-CoinFlip-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-CustomSignalAndSlot-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-LoginPageTest-Desktop_arm_darwin_generic_mach_o_64bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
(+368 files in other folders)
